classDiagram
    class Shot {
      -String mark
      +score() Integer
    }

    class Frame {
      -Integer number
      -Shot first_shot
      -Shot second_shot
      -Shot third_shot
      +number() Integer
      +first_shot() Shot
      +second_shot() Shot
      +score(next_frame, next_next_frame) Integer
      +strike?() Boolean
      +last?() Boolean
      +base_score() Integer
      -spare?() Boolean
      -strike_score(next_frame, next_next_frame) Integer
      -spare_score(next_frame) Integer
      -foundation?() Boolean
    }

    class Game {
      -Array~Frame~ frames
      +score() Integer
    }

    Game "1" *-- "10" Frame
    Frame "1" *-- "1..3" Shot
